# WeatherReport

./: .gitignore  README.md
WeatherReport/: .gitignore  CMakeLists.txt
WeatherReport/src/: main.cpp
WeatherReport/src/model/entities/: City.h  ForecastData.h  WeatherData.h  WeatherService.h
WeatherReport/src/model/services/: CityAPI.cpp  ConfigService.h  IWeatherService.h  WeatherAPI.cpp  cityapi.cpp  cityapi.h  citydb.cpp  citydb.h  geocodingservice.cpp  geocodingservice.h  openweathermapservice.cpp  openweathermapservice.h  weatherapi.h  weatherapiservice.cpp  weatherapiservice.h  weatherdb.cpp  weatherdb.h  weathericonmapper.cpp  weathericonmapper.h  weatherservicefactory.cpp  weatherservicefactory.h  weatherservicemanager.cpp  weatherservicemanager.h
WeatherReport/src/viewmodel/: CacheManager.h  weatherviewmodel.cpp  weatherviewmodel.h
WeatherReport/tests/: CMakeLists.txt
WeatherReport/tests/test_cachemanager/: tst_cachemanager.cpp
WeatherReport/tests/test_weatherviewmodel/: tst_weatherviewmodel.cpp
WeatherReport/view/: DetailCard.qml  FavoriteItem.qml  ForecastCard.qml  Main.qml  SettingsView.qml  TabButton.qml  TitleButton.qml
